# MonoDepth-VIO

./: .gitignore  DA3_Chapter_Full.md  IMU_Chapter.md  OpenVINS_Chapter.md  README.md  build_docker.sh  config.yaml  config_no_matrix.yaml  depth_publisher.py  exec_docker.sh  extract_from_bag.py  infer_camera.py  infer_image.py  infer_realsense.py  ros_imu_d435_guide.md  run_docker.sh  sensors.launch  trajectory.txt
System Volume Information/: IndexerVolumeGuid
docker/: Dockerfile
imu_csv_publisher/: package.xml  ros_imu_data.csv  setup.py
imu_csv_publisher/imu_csv_publisher/: csv_imu_publisher.py
imu_csv_publisher/launch/: imu_csv_publisher.launch.py
imu_csv_publisher/scripts/: .gitignore  exp_2_rosbag.py  imu_data.py  imu_data_start.py
openvins_modified/: Feature.h  ROS2Visualizer.cpp  ROS2Visualizer.h  UpdaterMSCKF.cpp  VioManager.cpp  VioManager.h
scripts/: test.py
src/MonoDepth-VIO/: CMakeLists.txt  README.md  infer_ros.py  merge_sensors.py  package.xml  requirements.txt
src/MonoDepth-VIO/config/: d435_iphone.yaml
src/MonoDepth-VIO/launch/: .system.launch.swp  system.launch
src/MonoDepth-VIO/scripts/: csv_imu_publisher.py  gyrosc_bridge.py
src/MonoDepth-VIO/src/depth_anything_3/weights/DA3METRIC-LARGE/: config.json
src/depth_anything_3/weights/DA3-LARGE/: README.md
src/imu_csv_publisher/: .gitignore  CMakeLists.txt  CMakeLists.txt.save  README.md  package.xml
src/imu_csv_publisher/launch/: imu.launch
src/imu_csv_publisher/scripts/: README.md  imu_data_start.py
src/launch/: system.launch
(+1 files in other folders)
